--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
             <div class="block-skills">
                     <h3 class="h3-title-bloc">skils</h3>
                 <div class="row">
+                    <div class="col-md-12">
+                        web mobile
+                    </div>
                 </div>
             </div>
 
