--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
         <div class="col-md-9 col-sm-12 col-xs-12 header-info"   >
             <h1 class="header-name">marwa channoufi</h1>
             <h2 class="header-title">FullStack Developer</h2>
-            <p class="header-description">Je suis une développeuse full
-                Stack javascript, actuellement je
-                suis àla recherche d’un travail
-                afin d’employer mes connaissances
-                acquises pendent mon cursus
-                universitaire et professionnell</p>
+            <p class="header-description">To succeed,<br>
+
+              your desire for success<br> must be greater
+              than your fear <br>of failure</p>
         </div>
     </div>
     <div class="row">
@@ -152,14 +150,7 @@
                               <i class="fa fa-calendar"></i>2020
                             </h6>
                             <h4 class="timeline-title">[Developer Integrateur Web ]<br><small> Evaste Tunisia</small></h4>
-                            <p class="timeline-text">
-                              <b  > Tasks carried out:</b><br/>
-                              ✓ Cutting, editing and integration of PSD pages in
-                                <span class="style-exp">  HTML / CSS / JS / Bootstrap</span> with Responsive design, adaptive design
-                               .<br/>
-                              ✓ Integrate and Develop websites with<span class="style-exp"> CMS 
-                                  wordpress</span> (creation and integration of template pages, develop and install <span class="style-exp"> plugins WordPress)</span><br/> 
-                            </p>
+                             
                           </div>
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
